--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html class="no-js" lang="zxx">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160822314-1"></script>
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160822314-1');
+    </script>
+
     <meta charset="utf-8">
     <link rel="icon" href="img/letterv.jpg" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -11,6 +21,14 @@
     <meta content="Software Development company in Lagos" name="Software Developers">
     <meta content="Digital marketing firm in Victoria Island Lagos" name="Digital Marketing firm">
     <meta name="description" content="">
+    <meta keywords="Visioncave Integrated Solutions">
+    <meta name="description" content="Software Development, Digital Marketing, IT Outsourcing">
+    <meta name="keywords" content="Website Development, Mobile App Development, Digital Marketing">
+    <meta name="keywords" content="E-commerce,ReactJS, VIS, Visioncave JavaScript">
+    <meta name="keywords" content="Web, Mobile, UI/UX Design Digital Agency">
+    <meta name=”geo.placename” content=”Victoria Island“>
+    <meta name=”geo.region” content=”Nigeria Lagos +234“>
+    <meta name="author" content="Visioncave Integrated Solutions">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
@@ -138,7 +156,7 @@
                         <div class="thumb">
                                 <img src="img/icon/2.svg" alt="">
                         </div>
-                        <h3>IT Consulting</h3>
+                        <h3>IT Consulting </h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
@@ -155,7 +173,7 @@
                                 <div class="thumb">
                                         <img src="img/icon/3.svg" alt="">
                                 </div>
-                                <h3>Mobile Application Development</h3>
+                                <h3>Mobile & Web Application Development</h3>
                             </div>
                 </div>
             </div>
@@ -215,7 +233,7 @@
                     <div class="row  align-items-center">
                             <div class="col-xl-5 col-lg-5 col-md-6">
                                 <div class="features_info2">
-                                    <h3>Optimize your Business with our </h3>
+                                    <h3>Optimize your Business with VIS </h3>
                                     <p>Put your business directly in the hands of your clients, customers, 
                                         or workforce. We offer Cross-Platform mobile application services 
                                         in Android, iOS, 
@@ -239,7 +257,7 @@
                     <div class="row  align-items-center">
                             <div class="col-xl-5 col-lg-5 offset-xl-1 offset-lg-1 col-md-6">
                                 <div class="about_image wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".3s">
-                                    <img src="img/ilstrator/phoneimg.png" alt="">
+                                    <img src="img/ilstrator/phoneimg2.png" alt="visioncave integrated solutions team">
                                 </div> 
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6">
@@ -250,7 +268,7 @@
                                         AWS Services, modernising legacy systems, and consolidating app portfolios. .</p>
                                     <ul>
                                         <li class="wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s" > Extremely helpful customer support </li>
-                                        <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".6s" > Fast loading time and high performance. </li>
+                                        <li class="wow fadeInUp" data-wow-duration=".8s" data-wow-delay=".6s" > Fast loading high performance Apps. </li>
                                         <li class="wow fadeInUp" data-wow-duration=".9s" data-wow-delay=".7s" > Dedicated Development team for outsourcing</li>
                                     </ul>
             
@@ -482,7 +500,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://linkedin.com/company/visioncave" target="blank">
+                                        <a href="https://linkedin.com/company/visioncave" target="blank" alt="visioncave Integrated solutions linkedin page">
                                             <i class="fa fa-linkedin"></i>
                                         </a>
                                     </li>
@@ -497,10 +515,10 @@
                                     Services
                             </h3>
                             <ul>
-                                <li><a href="#">Team management</a></li>
-                                <li><a href="#">Collaboration</a></li>
-                                <li><a href="#">Todo</a></li>
-                                <li><a href="#">Events</a></li>
+                                <li><a href="#">Software Development</a></li>
+                                <li><a href="#">Networking & Collaborations. CCNP</a></li>
+                                <li><a href="#">Systems Management</a></li>
+                                <li><a href="#">Digital Marketing. Google SEO</a></li>
                             </ul>
 
                         </div>
@@ -512,21 +530,21 @@
                             </h3>
                             <ul>
                                 <li><a href="#">Services</a></li>
+                                <li><a href="contact.html">Contact</a></li>
                                 <li><a href="#">Features</a></li>
-                                <li><a href="#">Contact</a></li>
-                                <li><a href="#">Careers</a></li>
+                                <li><a href="contact.html">Careers</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-xl-3 col-md-6 col-lg-3">
                         <div class="footer_widget">
                             <h3 class="footer_title">
-                                    #
+                                    Victoria Island, Lagos
                             </h3>
                             <ul>
                                 <li>
                                     <a href="#">
-                                        Privacy Policy
+                                        Digital Marketing Strategies
 
                                     </a>
                                 </li>
@@ -547,7 +565,7 @@
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
                             
-                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://visioncave.net" target="_blank">VisionCave</a>
+                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://visioncave.net" target="_blank">VisionCave Integrated Solutions</a>
 
                         </p>
                     </div>
